--- a/글수정.html
+++ b/글수정.html
@@ -143,7 +143,7 @@
         <!-- 질문 2 : fieldset 추가 적당한지-->
         <fieldset>
             <input type="hidden" id="contents" name="contents" />
-            <h2>글쓰기</h2>
+            <h2>글수정</h2>
             <div id="standalone-container">
                 <div id="toolbar-container">
                     <!--                    <span class="ql-formats">-->
