--- a/create_crew.html
+++ b/create_crew.html
@@ -367,6 +367,7 @@
                         <label><h2>크루이름</h2>
                             <input class="crew_name_input" placeholder="크루이름 입력" maxlength="10"/><span class="crew_name_len_limit">최소2자/최대10자</span>
                         </label>
+                        <!-- p 요소 한개로만 두어서 text만 바꾸게 해라-->
                         <p id="nameMsg" class="msg">최소 2자 입력해주세요</p>
                         <p id="nameCheckMsg" class="msg">중복된 이름입니다.</p>
                     </div>
