--- a/temp.html
+++ b/temp.html
@@ -512,7 +512,7 @@
                 <div class="amity_history">
                     <div class="amity_total">친목</div>
                     <a href="" class="amity_view_more">친목 더 보기</a>
-                    <div id="chart-area"></div>
+                    <canvas id="marksChart"  width="200" height="200"></canvas>
                 </div>
             </div><!--//history_box-->
         </div><!--//section_fourth-->
