--- a/가입신청폼.html
+++ b/가입신청폼.html
@@ -27,11 +27,12 @@
         .disappear_view{
             display: none;
         }
-        .form_box{
+        .form_box_item{
             width: 458px;
-            height: 544px;
+            min-height: 544px;
             border: 1px solid #424242;
             padding:20px 10px;
+            margin-bottom: 20px;
         }
         .register_profile_box{
             width: 422px;
@@ -50,7 +51,7 @@
 
         .qualification_answer_box{
             width: 451px;
-            height: 173px;
+            min-height: 173px;
             border: 1px solid #424242;
             margin-top: 10px;
             text-align: center;
@@ -112,51 +113,66 @@
 <body>
 
 <div id="popRegisterForm">
-    <div class="form_box">
+    <ul class="form_box_list">
+    </ul>
+    <div class="close"><i class="fas fa-times"></i></div>
+</div>
+
+<script type="text/template" id="qeTmpl">
+    <@ _.each(qual,function(q){
+    console.log(this);@>
+    <li class="form_box_item">
         <div class="register_profile_box">
             <div class="person_info_box">
                 <div class="profile_img">
                     <img src="img/default.jpg" width="40" height="40" />
                 </div>
                 <div class="profile_box">
-                    <h4 class="name">송진현</h4>
-                    <h4 class="birth_year">1996년생</h4>
-                    <h4 class="address">송진현</h4>
+                    <h4 class="name"><@=q.name@></h4>
+                    <h4 class="birth_year"><@=q.birthYear@></h4>
+                    <h4 class="address"><@=q.address@></h4>
                 </div>
             </div>
-            <div class="introduce_box">타오르고 있는가? 우리 눈이 그것을 보는 때에 우리의 귀는 생의 찬미를 듣는다 그것은 웅대한 관현악이며 미묘한 교향악이다 뼈 끝에 스며들어 가는 열락의 소리다이것은 피어나기 전인 유소년에게서 구하지 </div>
-        </div>
+            <div class="introduce_box"><@=q.intro@></div>
 
-        <div class="qualification_answer_box">
-            <h3>자격 테스트 문제 답변</h3>
-            <div>
-                <ul class="answer_list">
-                    <li class="answer_item">1. 연봉이 어떻게 되시나요?</li>
-                    <li class="answer_item">4000 이상</li>
-                    <li class="answer_item">2. 직업이 어떻게 되시나요?</li>
-                    <li class="answer_item">소방관</li>
-                </ul>
+            <div class="qualification_answer_box">
+                <h3>자격 테스트 문제 답변</h3>
+                <div>
+                    <ul class="answer_list">
+                        <li class="answer_item"><@=q.question1@></li>
+                        <li class="answer_item"><@=q.answer1@></li>
+                        <li class="answer_item"><@=q.question2@></li>
+                        <li class="answer_item"><@=q.answer2@></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="confirm_box">
+                <h4>승인까지 남은 시간 <span class="remain_time"></span></h4>
+                <div class="confirm_btn_box"><!-- 기본이 submit이라 막아야해-->
+                    <button type="button" class="next_btn"><a>가입 승인</a></button>
+                    <button type="button" class="prev_btn">가입 거절</button>
+                </div>
             </div>
         </div>
-        <div class="confirm_box">
-            <h4>승인까지 남은 시간 <span class="remain_time"></span></h4>
-            <div class="confirm_btn_box"><!-- 기본이 submit이라 막아야해-->
-                <button type="button" class="next_btn"><a>가입 승인</a></button>
-                <button type="button" class="prev_btn">가입 거절</button>
-            </div>
-        </div>
-    </div>
+    </li>
+    <@})@>
+</script>
 
-    <div class="close"><i class="fas fa-times"></i></div>
-</div>
 <script src="js/jquery.js"></script>
 <script src="js/moment-with-locales.js"></script>
+<script src="js/underscore-min.js"></script>
 <script>
+    // % -> @ 으로
+    _.templateSettings = {interpolate: /\<\@\=(.+?)\@\>/gim,evaluate: /\<\@([\s\S]+?)\@\>/gim,escape: /\<\@\-(.+?)\@\>/gim};
     // 닫기
     const $close = $('.close');
     $close.click(function (e) {
         $('#popRegisterForm').addClass('disappear_view');
     });
+        const $formBoxList = $('.form_box_list');
+
+
+    const qeTmpl = _.template($('#qeTmpl').html());
 
     //가입 승인버튼
     const $nextBtn = $('.next_btn');
@@ -170,40 +186,87 @@
 
     //시간 차이 보여줌 1초마다 차이가 줄어듦
     //let meetingDue = 미팅시간-3일;
-    let tomorrow = moment('2020/12/30');
-    function displaytime(){
-        //  Date객체 생성 (
-        let now = moment();
+    function displaytime(json){
 
-        //  역사 1900년대 사람들은 2000년대를 고려하지 않고 getYear라는 함수를 만들었었음
 
-        let tmp = moment.duration(tomorrow.diff(now)).asMinutes();
-        console.log(tmp);
+        $(".remain_time").each(function (idx){
 
-        //시분초 차이 구하기
-        let seconds = moment.duration(tomorrow.diff(now)).seconds();
-        let minute = moment.duration(tomorrow.diff(now)).minutes();
-        let hour = moment.duration(tomorrow.diff(now)).hours();
+            //  Date객체 생성 (
+            let now = moment();
+            let tomorrow = moment(json[idx].end_date);
+            console.log(tomorrow.unix());
+            console.log(now.unix());
+            //  역사 1900년대 사람들은 2000년대를 고려하지 않고 getYear라는 함수를 만들었었음
+            //시분초 차이 구하기
+            let seconds = moment.duration(tomorrow.diff(now)).seconds();
+            let minute = moment.duration(tomorrow.diff(now)).minutes();
+            let hour = moment.duration(tomorrow.diff(now)).hours();
+            let days = moment.duration(tomorrow.diff(now)).days();
+            let fullTime;
+            hour = days*24 + hour;
+            //00:00:00으로 보이게 하기
+            if(minute<10 && seconds<10){
+                fullTime =  hour+":0" + minute+":0" + seconds;
+            }else if(minute<10){
+                fullTime =  hour+":0" + minute+":" + seconds;
+            }else if(seconds<10){
+                fullTime =  hour+":" + minute+":0" + seconds;
+            }else{
+                fullTime =  hour+":" + minute+":" + seconds;
+            }
+            //console.log(fullTime);
+            // text 표시
+            $(this).text(fullTime);
 
-        let fullTime;
-        //00:00:00으로 보이게 하기
-        if(minute<10 && seconds<10){
-            fullTime =  hour+":0" + minute+":0" + seconds;
-        }else if(minute<10){
-            fullTime =  hour+":0" + minute+":" + seconds;
-        }else if(seconds<10){
-            fullTime =  hour+":" + minute+":0" + seconds;
-        }else{
-            fullTime =  hour+":" + minute+":" + seconds;
-        }
 
-        // text 표시
-        $(".remain_time").text(fullTime);
+        });
+
 
     }//displayTime() end
-    setInterval(function (){
-        displaytime();
-    },1000);
+
+    function tikTokTime(json){
+        setInterval(function (){
+            displaytime(json);
+        },1000);
+    }
+
+    $(document).on("click", '.prev_btn',function (e) {
+        if (confirm(name+"거절 하시겠습니까?") == true){    //확인
+            const $this = $(this).parent().parent().parent();
+            $.ajax({
+                url:"ajax/refuse.json",
+                type : 'POST',
+                dataType : "json",
+                error : function(xhr, error, code) {
+                    alert("에러:" + code);
+                },
+                success:function(json) {
+                    if(json.result==true){
+                        alert("true");
+                        $this.remove();
+                    }
+                }
+            });
+        }else{   //취소
+            return false;
+        }
+    });
+
+
+    $.ajax({
+        url:"ajax/qualificationForm.json",
+        type : 'POST',
+        dataType : "json",
+        error : function(xhr, error, code) {
+            alert("에러:" + code);
+        },
+        success:function(json) {
+            $('.form_box_list').html(qeTmpl({qual : json}));
+
+            tikTokTime(json);
+
+        }
+    });
 </script>
 </body>
 </html>
